--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -22,16 +22,13 @@
     margin-bottom: 1rem;
 }
 
-.social-label {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #1C1C1C;
-    font-size: 16px;
-    margin-bottom: 10px;
-    text-decoration: none;
+.social-icons {
+    display: flex;
+    flex-direction: row;
 }
 
 .social-icon-link {
     color: #1C1C1C;
     font-size: 24px;
-    
+    padding: 0.5rem;
 }
