--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,19 +1,18 @@
 .hero-container {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     object-fit: contain;
-    padding-left: 8rem;
-    padding-right: 8rem;
     justify-content: center;
+    padding-top: 4rem;
+    padding-bottom: 6rem;
 }
 
-.hero-container > h1 {
+.hero-container p {
     display: flex;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #1C1C1C;
-    font-weight: lighter;
+    color: #1c1c1c;
     text-align: left;
+    font-size: 30px;
 }
