--- a/src/components/resumee/List.css
+++ b/src/components/resumee/List.css
@@ -1,15 +1,14 @@
 .list-wrap {
     border-bottom: 1px solid;
     border-color: #EAE1D5;
-    width: 500px;
-    padding-bottom: 1rem;
+    max-width: 500px;
 }
 
 .list-head {
     font-size: 18px;
     font-weight: normal;
     text-align: left;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     margin-top: 1rem;
 }
 
@@ -27,7 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin-bottom: 0.2rem;
 }
 
 .title {
