--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -1,7 +1,3 @@
-.posts {
-    padding: 2rem;
-}
-
 .post-container {
     display: flex;
     flex-direction: column;
@@ -41,16 +37,16 @@
 
 .post-pic-wrapper {
     position: relative;
-    max-width: 300px;
-    width: 300px;
-    overflow: hidden;
-    margin: 0 20px;
+    min-width: 100px;
+    max-width: 100px;
+    height: 75px;
+    margin: 0 25px;
 }
 
 .post-img {
-    max-width: 100%;
-    vertical-align: middle;
-    padding: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .post-info-wrapper {
@@ -85,6 +81,10 @@
         margin: auto;
         max-width: 300px;
         padding-top: 20px;
+    }
+
+    .button-wrap {
+        justify-content: center;
     }
 }
 
