--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,5 +1,4 @@
 .cards {
-    padding: 4rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -7,6 +6,7 @@
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: center;
     margin: 0 auto;
 }
 
@@ -24,9 +24,8 @@
 
 .cards_item {
     display: flex;
-    flex: 1;
-    margin: 0 2rem;
-    width: 16rem;
+    margin: 0 1rem;
+    width: 15rem;
     border: 1px solid;
     border-color: #EAE1D5;
 }
