--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 .post-pic-wrapper {
@@ -61,7 +62,7 @@
 .post-item p {
     text-align: left;
     font-size: 14px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
 }
 
 .button-wrap {
